<resources>
    <string name="app_name">Test789</string>
    <string name="register">Register</string>
    <string name="register_as">Register as:</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email.</string>
    <string name="reset_password">Reset Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_products_available">No stories available</string>
    <string name="read">Read</string>
    <string name="author">Author</string>
    <string name="book_title">Book title</string>
    <string name="home">Home</string>
    <string name="progress">Progress</string>
    <string name="profile">Profiles</string>
    <string name="book_details">About</string>
    <string name="arrow_back">arrow back</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews">No reviews found for this book!</string>
    <string name="like_the_story">Like the story</string>
    <string name="dislike_the_story">Dislike the story</string>
    <string name="dislike_reason">Please give your reason of disliking the story. This will help us do better content for you!</string>
    <string name="submit">Submit</string>
    <string name="total_accessible_books">Currently accessible books</string>
    <string name="attempted">Attempted history</string>
    <string name="completed">Completed history</string>
    <string name="info">info</string>
    <string name="feedback">Would you like to share some feedback?</string>
    <string name="attempted_books">Attempted books</string>
    <string name="update">Update</string>
    <string name="edit_age">edit age</string>
    <string name="enter_age">Enter age</string>
    <string name="child_name">Child name</string>
    <string name="child_age">Child age</string>
    <string name="read_books">Completed books</string>
    <string name="profiles">Child profiles</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="dialect">Dialect</string>
    <string name="content">Make story</string>
    <string name="hello">Hello author 🖐</string>
    <string name="details">Story details</string>
    <string name="category">Category</string>
    <string name="author_greetings">Hello %1$s</string>
    <string name="read_progress">Read: %1$s %</string>
    <string name="select_profile">Select profile</string>
    <string name="add_child">Add child</string>
    <string name="update_child_details">Update child details</string>
    <string name="by">By %1$s</string>
    <string name="file1_pdf">file1.pdf</string>
    <string name="review_value">Say something about this story</string>
    <string name="select_file_pdf">Select file (pdf)</string>
    <string name="upload">Upload</string>
    <string name="my_stories">My stories</string>
    <string name="who_is_reading">Who is reading</string>
    <string name="edit">Edit story</string>
    <string name="_0">0</string>
    <string name="preferred_age_and_below">Preferred age (and below)</string>
    <string name="_13">13</string>
</resources>