<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar6"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_below="@id/textview1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/primary"
                android:max="100"
                android:progress="0"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edittext17"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/progressBar6"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:hint="@string/name"
                android:drawableStart="@drawable/baseline_person"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:textColor="@color/text"
                android:textColorHint="@color/primary" />

            <EditText
                android:id="@+id/edittext18"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/edittext17"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:hint="@string/phone"
                android:drawableStart="@drawable/baseline_phone"
                android:inputType="number"
                android:paddingHorizontal="10dp"
                android:textColor="@color/text"
                android:textColorHint="@color/primary" />

            <EditText
                android:id="@+id/edittext15"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/edittext18"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp"
                android:drawableStart="@drawable/baseline_email"
                android:background="@drawable/edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="10dp"
                android:textColor="@color/text"
                android:textColorHint="@color/primary" />

            <LinearLayout
                android:id="@+id/dialect"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/edittext15"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/edit_text"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/baseline_language"/>

                <TextView
                    android:id="@+id/dialect_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:hint="@string/dialect"
                    android:textColor="@color/text"
                    android:textColorHint="@color/primary" />

                <Spinner
                    android:id="@+id/dialect_spinner"
                    android:layout_width="45dp"
                    android:layout_height="45dp" />

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField3"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/dialect"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp"
                android:textColorHint="@color/primary"
                app:hintEnabled="false"
                app:passwordToggleContentDescription="Toggle password"
                app:passwordToggleEnabled="true">


                <EditText
                    android:id="@+id/edittext16"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/edit_text"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingVertical="5dp"
                    android:textColor="@color/text"
                    android:drawableStart="@drawable/baseline_key_24"
                    android:textColorHint="@color/primary" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/registerLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textField3"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/register_as"
                    android:textColor="@color/primary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/selectedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:padding="1dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="gone" />


                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp" />
            </LinearLayout>

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/registerLL"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button"
                android:text="@string/register"
                android:textColor="@color/button_text" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerBtn"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/primary"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text"
                    app:backgroundTint="@null" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>